<resources>
    <string name="app_name">ISAP</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_farmer_worksace">FarmerWorksaceActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="nav_book">Booking</string>
    <string name="nav_return">Returning</string>
    <string name="nav_cancel">Canceling</string>
    <string name="nav_logout">Logout</string>
    <string name="nav_profile">Profile</string>

</resources>
